--- a/css/styles.css
+++ b/css/styles.css
@@ -781,7 +781,7 @@ nav.hide {
     content: "P";
     position: absolute;
     top: 0;
-    background: #867a8b;
+    background: #60678b;
     width: 100%;
     height: 100%;
     display: flex;
@@ -876,13 +876,13 @@ body.default-cursor {
 }
 
 body.heart-cursor {
-    cursor: url('../img/cursor image/innovation.png'), auto;
+    cursor: url('../img/cursor image/bear (1).png'), auto;
 }
 
 body.star-cursor {
-    cursor: url('../img/cursor image/almonds (1).png')4 4, se-resize;
+    cursor: url('../img/cursor image/pawprint\ \(1\).png')4 4, se-resize;
 }
 
 body.pen-cursor {
-    cursor: url('../img/cursor image/onion.png'), auto;
+    cursor: url('../img/cursor image/pig\ \(1\).png'), auto;
 }
